Fixed block scrollbar issue

--- a/modules/cms/src/admin/resources/scss/components/_block.scss
+++ b/modules/cms/src/admin/resources/scss/components/_block.scss
@@ -128,7 +128,7 @@ $block-padding: 10px !default;
 .block-front {
     @include clearfix;
     cursor: pointer;
-    overflow: auto;
+    overflow: hidden;
 
     .block-is-layout > & {
         padding: 0;
